Interviiew-TF Code-&-Yaml/k8s_yml/Deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: nginx-deployment 
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name : nginx-pod
      labels:
        app: nginx    
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
