Interviiew-TF Code-&-Yaml/k8s_yml/netflixservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix
spec:
  selector:
    app: netflix
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
